# Omnipresent

apps/android/: settings.gradle.kts
apps/android/app/: build.gradle.kts
apps/android/app/src/main/: AndroidManifest.xml
apps/android/gradle/: libs.versions.toml
apps/android/gradle/wrapper/: gradle-wrapper.properties
apps/desktop/: components.json  opencode.json  package.json
apps/desktop/src/: App.css  App.tsx  main.tsx
apps/desktop/src-tauri/: .gitignore  Cargo.toml  omnipresent_auth.txt  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs
apps/desktop/src-tauri/src/commands/: core_commands.rs
apps/desktop/src-tauri/src/services/: core_service.rs  mod.rs  wifi_service.rs
apps/desktop/src-tauri/src/state/: app_state.rs
apps/desktop/src-tauri/src/tray/: system_tray.rs
apps/desktop/src/components/: theme-toggle.tsx
apps/desktop/src/components/dashboard/: home.tsx
apps/desktop/src/components/legal/: terms-and-conditions.tsx
apps/desktop/src/components/ui/: carousel.tsx
apps/desktop/src/components/welcome/: bar.tsx  (+4 more)
apps/desktop/src/lib/: tauri-api.ts  types.ts  utils.ts
core/: .gitignore  Cargo.toml  build.rs
core/docs/: README.md
core/docs/messaging/: README.md
core/docs/security/: README.md
core/proto/: message.proto
core/src/: lib.rs  main.rs
core/src/handler/: controller.rs
core/src/mouse/: factory.rs  linux.rs  macos.rs  mock.rs  mod.rs  strategy.rs  windows.rs
core/src/network/: mod.rs  server.rs
core/src/security/: auth.rs
core/src/service/: manager.rs  models.rs
(+20 files in other folders)
