[package]
name = "core"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.9"
image = "0.25.10"
local-ip-address = "0.6.10"
log = "0.4.29"
opener = "0.8.4"
prost = "0.14.3"
qrcode = "0.14.1"
rand = "0.10.0"
tokio = { version = "1.50.0", features = ["full"] }

[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.13.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging"] }


[build-dependencies]
prost-build = "0.14.3"
